--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
       <div class="row">
         <div class="menu-card reveal delay-1">
-          <a href="">
+          <a>
             <img src="image/fc.jpg" alt="Menu 1" />
             <h4 class="menu-card-title">Fotocopy Biasa</h4>
             <h5 class="menu-card-description">-Hitam putih-</h5>
@@ -97,7 +97,7 @@
           </a>
         </div>
         <div class="menu-card reveal delay-2">
-          <a href="">
+          <a>
             <img src="image/dc.jpg" alt="Menu 2" />
             <h4 class="menu-card-title">Cetak Dokumen</h4>
             <h5 class="menu-card-description">-File PDF, Word, PPT-</h5>
@@ -106,7 +106,7 @@
           </a>
         </div>
         <div class="menu-card reveal delay-3">
-          <a href="">
+          <a>
             <img src="image/sc.jpg" alt="Menu 3" />
             <h4 class="menu-card-title">Scan Dokumen</h4>
             <h5 class="menu-card-description">-Scan ke PDF/JPG-</h5>
@@ -128,7 +128,7 @@
 
       <div class="row">
         <div class="menu-card reveal delay-1">
-          <a href="">
+          <a href="https://wa.me/6285136041095">
             <img src="image/wa.jpg" alt="Menu 1" />
             <h4 class="menu-card-title">~Whatsapp~</h4>
           </a>
