--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- Icons -->
-    <script src="https://unpkg.com/feather-icons"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js"></script>
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css" />
