--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- Animated Background -->
+    <div class="bg-animation">
+      <div class="floating-shape shape1"></div>
+      <div class="floating-shape shape2"></div>
+      <div class="floating-shape shape3"></div>
+      <div class="floating-shape shape4"></div>
+    </div>
+    <!-- Animated Background end -->
+
     <!-- Navbar start -->
     <nav class="navbar">
       <a href="#" class="navbar-logo">Jastip-<span>FotoCopy</span></a>
@@ -198,6 +207,11 @@
       </div>
     </footer>
     <!-- Footer end -->
+
+    <!-- Scroll to Top Button -->
+    <div class="scroll-top" id="scrollTop">
+      <i data-feather="arrow-up"></i>
+    </div>
 
     <!-- Icons -->
     <script>
